--- a/Captson_project_EDA_hotel_booking_project.ipynb
+++ b/Captson_project_EDA_hotel_booking_project.ipynb
@@ -1906,7 +1906,14 @@
         "plt.xlabel('Reserved Room Type')\n",
         "plt.ylabel('Number of Bookings')\n",
         "\n",
-        "# Add a legend to\n"
+        "# Add a legend to explain the colors (canceled vs. not canceled)\n",
+        "plt.legend(title='Cancellation', labels=['Not Canceled', 'Canceled'], loc='upper right')\n",
+        "\n",
+        "# Rotate x-axis labels for better readability\n",
+        "plt.xticks(rotation=45)\n",
+        "\n",
+        "# Show the plot\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "GM7a4YP4phqQ"
