--- a/Captson_project_EDA_hotel_booking_project.ipynb
+++ b/Captson_project_EDA_hotel_booking_project.ipynb
@@ -6,7 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "w6K7xa23Elo4",
         "PH-0ReGfmX4f",
         "mDgbUHAGgjLW",
         "H0kj-8xxnORC",
@@ -49,6 +48,7 @@
         "YPEH6qLeZNRQ",
         "EXh0U9oCveiU",
         "22aHeOlLveiV",
+        "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -162,7 +162,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/anjanbhalani/captson_project_EDA_hotel_booking/blob/main/Captson_project_EDA_hotel_booking_project.ipynb"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -2395,25 +2395,37 @@
       "cell_type": "code",
       "source": [
         "# Pair Plot visualization code\n",
+        "# Step 1: Import libraries\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "# Select numerical columns for correlation\n",
+        "# Step 2: Load the dataset\n",
+        "data = pd.read_csv('/content/Hotel Bookings.csv')\n",
+        "\n",
+        "# Step 3: Data Cleaning (if required)\n",
+        "# Handle missing values and duplicates as shown in the previous examples.\n",
+        "\n",
+        "# Step 4: Data Visualization and Storytelling\n",
+        "\n",
+        "# 1. Select numerical columns for pair plot\n",
         "numerical_cols = data.select_dtypes(include=[np.number])\n",
         "\n",
-        "# Calculate the correlation matrix using the selected numerical columns\n",
-        "correlation_matrix = numerical_cols.corr()\n",
+        "# 2. Create a pair plot using Seaborn\n",
+        "pairplot = sns.pairplot(numerical_cols)\n",
         "\n",
-        "# Create a heatmap using Seaborn\n",
-        "# 'annot' parameter adds numeric annotations to the cells\n",
-        "# 'cmap' parameter specifies the color map (coolwarm)\n",
-        "# 'fmt' parameter formats the annotation values with 2 decimal places\n",
-        "plt.figure(figsize=(12, 8))\n",
-        "plt.title('Correlation Heatmap')\n",
-        "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
+        "# Rotate x-axis and y-axis labels manually\n",
+        "for ax in pairplot.axes.flat:\n",
+        "    for label in ax.get_xticklabels():\n",
+        "        label.set_rotation(45)\n",
+        "    for label in ax.get_yticklabels():\n",
+        "        label.set_rotation(45)\n",
         "\n",
-        "# Show the heatmap\n",
+        "# Rotate the main title at a 45-degree angle\n",
+        "pairplot.fig.suptitle('Pair Plot of Numerical Variables', fontsize=32, y=1.02)\n",
+        "\n",
+        "# Show the pair plot\n",
         "plt.show()\n",
         "\n"
       ],
