--- a/Captson_project_EDA_hotel_booking_project.ipynb
+++ b/Captson_project_EDA_hotel_booking_project.ipynb
@@ -153,7 +153,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **GitHub Link -**"
+        "# **GitHub Link -** https://github.com/anjanbhalani/captson_project_EDA_hotel_booking/blob/main/Captson_project_EDA_hotel_booking_project.ipynb"
       ],
       "metadata": {
         "id": "w6K7xa23Elo4"
